Adding the UUID to the manifest and building an msix file